--- a/style.css
+++ b/style.css
@@ -11,8 +11,17 @@ body {
 
 body {
   display: flex;
+  gap: 10px;
   align-items: center;
   justify-content: center;
+}
+
+.button {
+  font-size: 48px;
+  padding: 10px;
+  line-height: 1;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
 #product-list {
@@ -21,7 +30,6 @@ body {
   display: flex;
   flex-flow: row nowrap;
   overflow: hidden;
-  overflow-x: auto;
   scroll-snap-type: x mandatory;
 }
 
